frontends/web/src/components/transactions/transaction.css
.transactionContainer {
    background-color: var(--color-white);
    padding: var(--spacing-default) var(--spacing-large);
    position: relative;
    overflow: hidden;
    border-bottom: solid 1px var(--color-lightgray);
    transition: all 0.2s ease;
}

.transactionContainer * {
    min-width: 0;
}

.transactionContainer:hover .toggleContainer,
.transactionContainer.expanded .toggleContainer {
    left: -32px;
}

.transaction {
    margin: 0 auto;
    max-width: calc(var(--content-width) - (var(--spacing-large) * 2));
    padding: var(--spacing-half) 0;
}

.date {
    color: var(--color-secondary);
    font-size: var(--size-small);
    line-height: 1;
    margin-bottom: 3px;
}

.date span:first-child {
    display: inline;
}

.date span:last-child {
    display: none;
}

.address {
    line-height: 1;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.amount {
    min-width: 160px !important;
    text-align: right;
    line-height: 1;
}

.amount div:first-child {
    margin-bottom: 3px;
}

.amount.receive {
    color: var(--color-softgreen);
}

.amount.send {
    color: var(--color-softred);
}

.amount.send_to_self {
    color: var(--color-gray);
}

.amount.converted {
    color: lightgrey;
}

.amountValue {
    font-size: var(--size-medium);
}

.fiat {
    font-weight: normal;
    font-size: var(--size-small) !important;
}

.unit {
    color: var(--color-secondary);
    font-size: var(--size-small);
}

.labelContainer {
    position: relative;
}

.transactionLabel {
    display: inline-block;
    font-size: var(--size-small);
    background-color: var(--color-secondary);
    color: var(--color-white);
    line-height: 1;
    text-align: center;
    margin-bottom: 3px;
    user-select: none;
    white-space: nowrap;
}

.transactionLabel.flat {
    position: relative;
    margin-right: var(--spacing-default);
    margin-bottom: 0;
    width: 32px;
    height: 32px;
    border-radius: 2px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.transactionLabel.flat img {
    width: 14px;
}

.transactionLabel.flat span {
    display: block;
    font-size: var(--size-small);
}

.transactionLabel.receive {
    background-color: var(--color-softgreen);
}

.transactionLabel.send {
    background-color: var(--color-softred);
}

.transactionLabel.send_to_self {

}

.toggleContainer {
    position: absolute;
    left: 0;
    top: 0;
    width: 32px;
    height: 32px;
    cursor: pointer;
    transition: all 0.1s ease;
}

.toggle {
    position: relative;
    left: 25%;
    top: 25%;
    width: 10px;
    height: 10px;
    border: solid;
    border-width: 2px 2px 0 0;
    border-color: var(--color-secondary);
    transform: rotate(-45deg) translate(0%, -50%);
    margin: 10px 0 0 8px;
}

.toggle.collapsed {
    border-width: 0 0 2px 2px;
    margin: 4px 0 0 8px;
}

.toggle.receive {
    border-color: var(--color-softgreen);
}

.toggle.send {
    border-color: var(--color-softred);
}

.row:not(:first-child) {
    margin-top: var(--spacing-half);
}

.items {
    margin: 0 calc(var(--spacing-default) * -1) calc(var(--spacing-half) * -1) calc(var(--spacing-default) * -1);
}

.items > * {
    margin: 0 var(--spacing-default) var(--spacing-half) var(--spacing-default);
}

.collapsedContent {
    overflow: hidden;
    max-height: 0;
    transition: all 0.2s ease;
}

.collapsedContent.active {
    margin-top: var(--spacing-half);
    max-height: 100px;
}

.collapsedContent .spacer {
    width: 34px;
    margin-right: var(--spacing-default);
}

.collapsedContent .transactionLabel {
    width: auto;
    text-align: left;
    background-color: transparent;
    color: var(--color-secondary);
}

.collapsedContent a {
    color: var(--color-coolblue);
}

.collapsedContent a:hover {
    color: var(--color-brightblue);
}

.externalLabel {
    display: none;
    width: 13px;
    height: 13px;
    margin-left: 5px;
    vertical-align: top;
    cursor: pointer;
}

.externalLabel img {
    width: 13px;
    height: 13px;
}

.external {
    position: relative;
    top: -1px;
    display: inline-block;
    vertical-align: bottom;
    width: 16px;
    height: 16px;
    margin-left: 5px;
    cursor: pointer;
}

.external img {
    width: 16px;
}

@media (max-width: 900px) {
    .transactionContainer {
        padding: var(--spacing-default) var(--spacing-default);
    }

    .transaction {
        max-width: calc(var(--content-width) - (var(--spacing-default) * 2));
    }

    .toggleContainer {
        display: none;
    }
}

@media (max-width: 640px) {
    .transactionContainer {
        padding: var(--spacing-default) var(--spacing-half);
    }

    .transaction {
        max-width: calc(var(--content-width) - (var(--spacing-half) * 2));
    }

    .collapsedContent.active {
        max-height: 106px;
    }

    .collapsedContent .spacer {
        min-width: 34px;
        margin-right: var(--spacing-half);
    }

    .items {
        margin: 0 calc(var(--spacing-half) * -1) calc(var(--spacing-half) * -1) calc(var(--spacing-half) * -1);
    }

    .items > * {
        margin: 0 var(--spacing-half) var(--spacing-half) var(--spacing-half);
    }

    .transactionLabel {
        display: block;
        word-wrap: break-word;
        overflow: hidden;
        font-size: var(--size-small);
        text-overflow: ellipsis;
    }

    .labelContainer {
        flex-shrink: 0;
        align-self: flex-start;
    }

    .transactionLabel.flat {
        margin-right: var(--spacing-half);
        font-size: var(--size-small);
    }

    .date span:first-child {
        display: none;
    }

    .date span:last-child {
        display: inline;
    }

    .amount {
        min-width: 130px !important;
    }

    .amountValue {
        font-size: var(--size-button);
    }

    .address {
        position: relative;
        font-size: var(--size-button);
    }

    .externalLabel {
        display: inline-block;
    }

    .external {
        display: none;
    }
}

